--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
+html {
+    background-color: rgb(255, 235, 56);
+}
+
 
 #wrapper {
-    width: 960px;
-    height: 960px;
-    position: relative;
-    margin: 0 auto;
+    width: 900px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: pink;
 }
 
 #container{
@@ -21,6 +27,7 @@
 
 .divs {
 	outline: 0.1px solid gray;
+    background-color: white;
 }
 
 .divs.active {
@@ -32,40 +39,32 @@
     width: 50px;
     height: 30px;
     position: absolute;
-    top: 350px;
-    left: 35px;
+    top: -150px;
+    left: 5px;
 }
 
 #rainbow {
     width: 70px;
     height: 30px;
     position: absolute;
-    top: 400px;
-    left: 25px;
+    top: -90px;
+    left: -5px;
 }
 
 #black {
     width: 50px;
     height: 30px;
     position: absolute;
-    top: 450px;
-    left: 35px;
-}
-
-#removeLines {
-    width: 70px;
-    height: 30px;
-    position: absolute;
-    top: 500px;
-    left: 25px;
+    top: -30px;
+    left: 5px;
 }
 
 .slidecontainer {
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 500px;
-    left: -7px;
+    top: 50px;
+    left: -40px;
     font-size: 15px;
 }
 
