--- a/style.css
+++ b/style.css
@@ -1,15 +1,31 @@
 html {
-    background-color: rgb(255, 235, 56);
+    background-color: #202124;
+    color: #fff;
+    font-family: sans-serif;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
 
-#wrapper {
-    width: 900px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: pink;
+.wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+}
+
+.buttons-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 250px;
+    justify-content: space-between;
+    padding-right: 50px;
 }
 
 #container{
@@ -17,58 +33,50 @@ html {
     height: 650px;
     display: grid;
     border: 0.1px solid black;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
 }
 
 .divs {
 	outline: 0.1px solid gray;
-    background-color: white;
+    background-color: #fff;
 }
 
 .divs.active {
     background-color: black;
 }
 
-
-#reset {
-    width: 50px;
-    height: 30px;
-    position: absolute;
-    top: -150px;
-    left: 5px;
-}
-
-#rainbow {
+.option-btn {
     width: 70px;
     height: 30px;
-    position: absolute;
-    top: -90px;
-    left: -5px;
+    background-color: transparent;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
-#black {
-    width: 50px;
-    height: 30px;
-    position: absolute;
-    top: -30px;
-    left: 5px;
+.option-btn:hover {
+    border: 1px solid #fff;
 }
 
-.slidecontainer {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 50px;
-    left: -40px;
-    font-size: 15px;
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #a5a5a5;
 }
 
-.slider {
-  height: 25px;
-  background: #d3d3d3;  
+.github-button {
+    width: 26px;
+    height: 25px;
+    background-image: url("./github-icon.svg");
+    background-size: cover;
+    background-color: transparent;
+    border: none;
+    margin-left: 10px;
+    cursor: pointer;
+    transition: transform .5s ease-in-out;
+}
+
+.github-button:hover {
+    transform: rotate(360deg);
 }
